# ProjectionMappingC

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  Doxyfile  ProjectionMappingSDK_v1.0.3_Presentation.pptx  ProjectionMapping_SDK_Features.pptx  README.md  commit_script.py  dump_exports.py  dumpbin.txt  dumpbin_out.txt  md_dump.md  vcpkg.json
.github/workflows/: ci.yml  doxygen.yml
bindings/unity/: README.md
bindings/unity/com.viitorx.holotrack/: README.md  package.json
bindings/unity/com.viitorx.holotrack/Runtime/: HeadTrackedCameraController.cs  HeadTrackedStereoController.cs  HeadTrackingConfig.cs  HeadTrackingDiagnostics.cs  HeadTrackingDisplaySurface.cs  HeadTrackingRecorder.cs  HoloTrackNative.cs  IHeadTrackingSource.cs  PMHTHeadTracker.cs  PMHTOakSource.cs  PMHTSimulatedSource.cs  vxholotrack.asmdef
bindings/unity/com.viitorx.pmsdk/Editor/: CalibrationWindow.cs  PMSDKDemoSceneGenerator.cs  PMSDKMeshWarpEditor.cs  SetupWizard.cs  vxpmsdk.Editor.asmdef
bindings/unity/com.viitorx.pmsdk/Runtime/: InteropExtensions.cs  NativeBindings.cs
bindings/unity/com.viitorx.pmsdk/Runtime/Calibration/: PMSDKAutoAlign.cs  PMSDKAutoBlend.cs  PMSDKBlackLevelCompensation.cs  PMSDKCalibrationCamera.cs  PMSDKCalibrationData.cs  PMSDKCalibrationHUD.cs  PMSDKCalibrationManager.cs  PMSDKCalibrationOverlay.cs  PMSDKCanvasReferencePattern.cs  PMSDKDenseWarp.cs  PMSDKGrayCodeDecode.cs  PMSDKHomography.cs  PMSDKLuminanceCompensation.cs  PMSDKNativeWebcamCamera.cs  PMSDKOsc.cs  PMSDKOscServer.cs  PMSDKPoseCalibratorOverlay.cs  PMSDKPoseSolver.cs  PMSDKProjectorPoseCalibrator.cs
bindings/unity/com.viitorx.pmsdk/Runtime/Components/: PMSDKBlackLevelLift.cs  PMSDKColorCorrection.cs  PMSDKCornerPin.cs  PMSDKCornerPinUI.cs  PMSDKDisplayActivator.cs  PMSDKEdgeBlend.cs  PMSDKExternalContent.cs  PMSDKGridWarp.cs  PMSDKLuminanceGain.cs  PMSDKMeshWarp.cs  PMSDKOutputTransform.cs  PMSDKProjector.cs  PMSDKTestPattern.cs  PMSDKTestPatterns.cs  PMSDKVelocityCap.cs
bindings/unity/com.viitorx.pmsdk/Runtime/Core/: BlendConfig.cs  EdgeBlend.cs  Mesh.cs  WarpNode.cs
bindings/unity/com.viitorx.pmsdk/Runtime/Shaders/: UnlitWarp.shader
bindings/unity/com.viitorx.pmsdk/Tests/Editor/: PMSDKCalibrationLogicTests.cs  PMSDKMathTests.cs  PMSDKOscTests.cs  (+2 more)
bindings/unreal/: README.md
bindings/unreal/Plugins/ProjectionMapping/: ProjectionMapping.uplugin
cmake/: PMSDKCompilerOptions.cmake  PMSDKConfig.cmake.in
docs/: ai_handoff.md  api.md  architecture.md  calibration-ux-design.md  decisions.md  dev-setup.md  holotrack-architecture.md  holotrack-stereo-integration.md  project-overview.md  roadmap.md  tasks.md  unity-architecture.md
examples/: CMakeLists.txt
examples/NativeExample/: CMakeLists.txt  main.cpp
holotrack/: CMakeLists.txt
holotrack/src/C_API/: DeviceAPI.cpp  TrackingAPI.cpp
holotrack/src/Tracking/: Tracker.cpp
holotrack/src/Tracking/Device/: OakDevice.cpp
holotrack/tests/: CoordinateTransformTests.cpp  FilterTests.cpp  HeadEstimatorTests.cpp  OffAxisProjectionTests.cpp  StateMachineTests.cpp  TrackerTests.cpp  ViewerSelectorTests.cpp
holotrack/tests/harness/: HoloTrackHarness.cpp
holotrack/tools/: OakSmoke.cpp
include/HoloTrack/C_API/: DeviceAPI.h  TrackingAPI.h  Types.h
include/HoloTrack/Core/: Export.h  Version.h
include/HoloTrack/Tracking/: Config.h  CoordinateTransform.h  Detection.h  Filters.h  HeadEstimator.h  IDetectionSource.h  IHeadFilter.h  OffAxisProjection.h  Tracker.h  TrackingStateMachine.h  Viewer.h  ViewerSelector.h
include/HoloTrack/Tracking/Device/: OakDevice.h
include/PMSDK/: PMSDK.h  PMSDK_C.h
include/PMSDK/Blend/: BlendConfig.h  EdgeBlend.h
include/PMSDK/C_API/: BlendAPI.h  CalibrationAPI.h  GeometryAPI.h  Types.h  WarpAPI.h
include/PMSDK/Calibration/: GrayCode.h  GrayCodeDecoder.h  Intrinsics.h
include/PMSDK/Core/: ErrorCode.h  Version.h
include/PMSDK/Geometry/: BezierPatch.h  GridWarp.h  Mesh.h  PerspectiveWarp.h
include/PMSDK/Math/: Matrix4.h  Vector2.h
include/PMSDK/Serialization/: GeometrySerializer.h
include/PMSDK/Warp/: DeformationField.h  Projector.h  Sampler.h  WarpNode.h
scripts/: build_release.py  generate_ppt.py  increment_version.py  md_to_pdf.py  package_release.py  update_cmake.py
src/: CMakeLists.txt
src/Blend/: BlendConfig.cpp  EdgeBlend.cpp  MaskGenerator.cpp
src/C_API/: BlendAPI.cpp  CalibrationAPI.cpp  GeometryAPI.cpp  WarpAPI.cpp
src/Calibration/: Calibrator.cpp  Extrinsics.cpp  GrayCode.cpp  GrayCodeDecoder.cpp  Intrinsics.cpp
src/Core/: Config.cpp  Context.cpp  HandleRegistry.h  LastError.cpp  LastError.h  Logger.cpp  MSVCWorkaround.cpp  Version.cpp
src/Geometry/: BVH.cpp  BezierPatch.cpp  DynamicMesh.cpp  GridWarp.cpp  KDTree.cpp  Mesh.cpp  MeshBuilder.cpp  MeshOptimizer.cpp  MeshSubdivision.cpp  PerspectiveWarp.cpp  UVMapping.cpp
src/Serialization/: BlendSerializer.cpp  GeometrySerializer.cpp  JsonHelpers.h  WarpSerializer.cpp
src/Warp/: DeformationField.cpp  Projector.cpp  Sampler.cpp  WarpNode.cpp
tests/: CMakeLists.txt
tests/Blend/: BlendConfigTests.cpp  EdgeBlendTests.cpp  MaskGeneratorTests.cpp
tests/C_API/: CalibrationAPITests.cpp  DecoderTests.cpp  GeometryAPITests.cpp  WarpAPITests.cpp
tests/Calibration/: ExtrinsicsTests.cpp  GrayCodeDecoderTests.cpp  GrayCodeTests.cpp  IntrinsicsTests.cpp
tests/Core/: ConfigTests.cpp  ContextTests.cpp  ErrorCodeTests.cpp  HandleRegistryTests.cpp  LastErrorTests.cpp  LoggerTests.cpp  StatusTests.cpp  VersionTests.cpp
tests/Geometry/: BVHTests.cpp  BezierPatchTests.cpp  CurveTests.cpp  DynamicMeshTests.cpp  GridWarpTests.cpp  IntersectionTests.cpp  KDTreeTests.cpp  MeshBuilderTests.cpp  MeshOptimizerTests.cpp  MeshTests.cpp  PerspectiveWarpTests.cpp
tests/Math/: GeometryMathTests.cpp  Matrix4Tests.cpp  QuaternionTests.cpp  TransformTests.cpp  VectorTests.cpp
tests/Serialization/: BlendSerializerTests.cpp  ErrorHandlingTests.cpp  GeometrySerializerTests.cpp  WarpSerializerTests.cpp
tests/Warp/: DeformationFieldEdgeTests.cpp  DeformationFieldTests.cpp  ProjectorTests.cpp  SamplerTests.cpp  WarpNodeTests.cpp
(+6 files in other folders)
